<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.janetaa.courseselectionapp.MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="326dp"
        android:layout_height="165dp"
        android:layout_marginBottom="37dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@drawable/mcc_logo"
        tools:layout_editor_absoluteX="25dp"
        tools:layout_editor_absoluteY="309dp" />

    <TextView
        android:id="@+id/lblLogin"
        android:layout_width="97dp"
        android:layout_height="37dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="37dp"
        android:text="@string/login"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lblPassword"
        android:layout_width="95dp"
        android:layout_height="32dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="46dp"
        android:text="@string/password"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblLogin" />

    <EditText
        android:id="@+id/txtUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="27dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/login_hint"
        android:inputType="textPersonName"
        android:selectAllOnFocus="true"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintHorizontal_bias="0.597"
        app:layout_constraintLeft_toRightOf="@+id/lblLogin"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="29dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        android:textSize="18sp"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toRightOf="@+id/lblPassword"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtUsername" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="92dp"
        android:layout_marginTop="57dp"
        android:text="@string/login_btn_txt"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPassword" />
</android.support.constraint.ConstraintLayout>
