<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.janetaa.courseselectionapp.MainClassList">

    <EditText
        android:id="@+id/txtFirstName"
        android:layout_width="170dp"
        android:layout_height="41dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="16dp" />

    <EditText
        android:id="@+id/txtLastName"
        android:layout_width="170dp"
        android:layout_height="41dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="6dp"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintLeft_toRightOf="@+id/txtFirstName"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="6dp" />

    <TextView
        android:id="@+id/lblFirstName"
        android:layout_width="126dp"
        android:layout_height="27dp"
        android:layout_marginLeft="38dp"
        android:layout_marginTop="8dp"
        android:text="@string/FirstName"
        android:textAlignment="viewStart"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtFirstName"
        android:layout_marginStart="38dp" />

    <TextView
        android:id="@+id/lblLastName"
        android:layout_width="140dp"
        android:layout_height="30dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="16dp"
        android:text="@string/LastName"
        android:textSize="18sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtLastName"
        android:layout_marginEnd="16dp" />

    <TextView
        android:id="@+id/lblPhone"
        android:layout_width="136dp"
        android:layout_height="35dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="30dp"
        android:text="@string/Phone"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblFirstName"
        android:layout_marginStart="16dp" />

    <EditText
        android:id="@+id/txtPhone"
        android:layout_width="191dp"
        android:layout_height="39dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="23dp"
        android:ems="10"
        android:inputType="phone"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintLeft_toRightOf="@+id/lblPhone"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblLastName"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <TextView
        android:id="@+id/txtDay"
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/txtBday"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblPhone"
        android:layout_marginStart="16dp" />

    <Spinner
        android:id="@+id/spMonth"
        android:layout_width="124dp"
        android:layout_height="52dp"
        android:layout_marginTop="20dp"
        android:entries="@array/Month"
        app:layout_constraintTop_toBottomOf="@+id/lblPhone"
        tools:layout_editor_absoluteX="104dp" />

    <EditText
        android:id="@+id/txtDay"
        android:layout_width="65dp"
        android:layout_height="48dp"
        android:ems="10"
        android:inputType="number"
        android:text="@string/txtDay"
        app:layout_constraintRight_toLeftOf="@+id/txtYear"
        android:layout_marginRight="0dp"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@+id/txtPhone"
        app:layout_constraintLeft_toRightOf="@+id/spMonth"
        android:layout_marginLeft="8dp"
        app:layout_constraintHorizontal_bias="1.0" />

    <EditText
        android:id="@+id/txtYear"
        android:layout_width="65dp"
        android:layout_height="47dp"
        android:layout_marginEnd="9dp"
        android:layout_marginRight="9dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:inputType="number"
        android:text="@string/txtYear"
        android:textAlignment="viewStart"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPhone" />

    <TextView
        android:id="@+id/txtCert"
        android:layout_width="88dp"
        android:layout_height="39dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="24dp"
        android:text="@string/cert"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDay"
        android:layout_marginStart="16dp" />

    <TextView
        android:id="@+id/txtTwoYr"
        android:layout_width="96dp"
        android:layout_height="43dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="23dp"
        android:text="@string/twoYr"
        android:textSize="18sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtYear" />

    <Switch
        android:id="@+id/swDegreeCert"
        android:layout_width="356dp"
        android:layout_height="34dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:checked="true"
        android:textOff="@string/cert"
        android:textOn="@string/twoYr"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:checked="true"
        tools:layout_editor_absoluteY="304dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <Spinner
        android:id="@+id/spCert"
        android:layout_width="162dp"
        android:layout_height="37dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:entries="@array/lstCert"
        android:spinnerMode="dropdown"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/swDegreeCert" />

    <Spinner
        android:id="@+id/spMajor"
        android:layout_width="162dp"
        android:layout_height="37dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="12dp"
        android:entries="@array/lstMajor"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/swDegreeCert" />

    <TextView
        android:id="@+id/lblCert"
        android:layout_width="126dp"
        android:layout_height="27dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/cert"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spCert" />

    <TextView
        android:id="@+id/lblMajor"
        android:layout_width="136dp"
        android:layout_height="27dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/txtMajor"
        android:textAlignment="textEnd"
        android:textSize="18sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spMajor" />

    <Button
        android:id="@+id/btnNext"
        android:layout_width="80dp"
        android:layout_height="42dp"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="16dp"
        android:text="@string/btnNext"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.557"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</android.support.constraint.ConstraintLayout>
